--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ body{
     }
     
     div#n2-ss-561 .n-uc-Yt9I9Gmyx6c3-inner {
-        background-color: RGBA(255, 244, 225, 1);
+        background-color: #fff;
         border-width: 0px 0px 0px 0px;
         border-style: solid;
         border-color: RGBA(255, 255, 255, 1);
@@ -599,7 +599,7 @@ body{
     }
     
     div#n2-ss-561 .n-uc-sh3imJn1dKdS-inner {
-        background-color: RGBA(231, 255, 255, 1);
+        background-color: #eef7ff;
         border-width: 0px 0px 0px 0px;
         border-style: solid;
         border-color: RGBA(255, 255, 255, 1);
