--- a/index.html
+++ b/index.html
@@ -1907,7 +1907,7 @@ body{
                                                                                                                 <div id="n2-ss-561item2" class="n2-font-c6494c829e5c163457f716d035df80cb-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Goldsmth</div>
                                                                                                             </div><br>
                                                                                                             <div class="n2-ss-layer n2-ow n-uc-78dhK0mXFozu" data-pm="normal" data-sstype="layer">
-                                                                                                                <div id="n2-ss-561item1" class="n2-font-65781a7d1886f3c06ac7985e271f410e-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Teaching for 12 years</div>
+                                                                                                                <div id="n2-ss-561item1" class="n2-font-65781a7d1886f3c06ac7985e271f410e-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Teaching since 2009</div>
                                                                                                             </div>
                                                                                                             <div class="n2-ss-layer n2-ow n-uc-0nVQOr8xbq2J" data-pm="normal" data-sstype="layer">
                                                                                                                 <div id="n2-ss-561item3" class="n2-font-63f8576901efa3286169323e0f07149f-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Goldsmth is passionate about songwriting, improvisation, and helping you become a creative musician!</div>
@@ -2020,7 +2020,8 @@ body{
                                                                                                                 <div id="n2-ss-561item12" class="n2-font-c6494c829e5c163457f716d035df80cb-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Arun Prakash</div>
                                                                                                             </div><br>
                                                                                                             <div class="n2-ss-layer n2-ow n-uc-1wm2ZDK2XApw" data-pm="normal" data-sstype="layer">
-                                                                                                                <div id="n2-ss-561item11" class="n2-font-65781a7d1886f3c06ac7985e271f410e-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Teaching for 8 years</div>
+                                                                                                                <div id="n2-ss-561item11" class="n2-font-65781a7d1886f3c06ac7985e271f410e-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Teaching since 2013
+</div>
                                                                                                             </div>
                                                                                                             <div class="n2-ss-layer n2-ow n-uc-riUzlWk2aFmP" data-pm="normal" data-sstype="layer">
                                                                                                                 <div id="n2-ss-561item13" class="n2-font-63f8576901efa3286169323e0f07149f-hover   n2-ss-item-content n2-ss-text n2-ow" style="display:block;">Arun has helped thousands of students around the world learn music with his new tools.</div>
